<resources>

    <!--ApplicationName-->
    <string name="app_name">Vector</string>

    <!--Login and Registration Fragment-->
    <string name="password_edt">Пароль</string>
    <string name="login_edt">Логин</string>

    <!--Only LoginFragment-->
    <string name="enter_btn">Войти</string>

    <!--Only RegistrationFragment-->
    <string name="registration_btn">Зарегистрироваться</string>
    <string name="agree_switch">Согласен с правилами</string>
    <string name="repeatPassword_edt">Повторить пароль</string>
    <string name="email_edt">Email</string>

    <!--AuthentificationActivity-->
    <string name="registr_btn">Регистрация</string>
    <string name="login_btn">Вход</string>

    <!--BottomNavBar-->
    <string name="menu_found">Найти</string>
    <string name="menu_map">Карта</string>
    <string name="menu_profile">Профиль</string>

    <!--ProfileFragment-->
    <string name="logout_btn">Выйти</string>
    <string name="welcome_textview">Добро пожаловать!</string>

    <!--WayFragment-->
    <string name="longitude_textview">Longitude</string>
    <string name="latitude_textview">Latitude</string>
    <string name="description_textview">Description</string>
    <string name="title_textview">Title</string>

    <!--BottomSheetFragment-->
    <string name="addmark_textview">Добавить</string>
    <string name="sharemark_textview">Поделиться</string>
    <string name="deletemarkers_textview">Очистить</string>

    <!--DialogFragment-->
    <string name="addmarker_btn">Добавить</string>
    <string name="deny_btn">Отмена</string>
    <string name="mark_title_textview">Заголовок</string>
    <string name="mark_description_textview">Описание</string>

</resources>
