<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <View
        android:id="@+id/removeView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/simplelineView"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/addMarkerImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/background_selector_btn_add_marker"
        android:padding="15dp"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/shareMarkerImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/background_selector_btn_share_marker"
        android:padding="15dp"
        android:src="@drawable/ic_share"
        app:layout_constraintStart_toEndOf="@+id/addMarkerImageBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/deleteMarkersImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/background_selector_btn_delete_marker"
        android:padding="15dp"
        android:src="@drawable/ic_delete_forever"
        app:layout_constraintStart_toEndOf="@+id/shareMarkerImageBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addMarkerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/addmark_textview"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMarkerImageBtn" />

    <TextView
        android:id="@+id/navigateToTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="15dp"
        android:text="@string/sharemark_textview"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/addMarkerTextView"
        app:layout_constraintTop_toBottomOf="@+id/shareMarkerImageBtn" />

    <TextView
        android:id="@+id/navigateFromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="15dp"
        android:text="@string/deletemarkers_textview"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/navigateToTextView"
        app:layout_constraintTop_toBottomOf="@+id/deleteMarkersImageBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>